--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
             </div>
             <!-- form section end -->
         </main>
-        <footer></footer>
+        <!-- footer started -->
+        <footer>
+            <p>Terms of use | Privacy policy </p>
+        </footer>
+        <!-- footer end -->
     </section>
 </body>
 
