updated industry size code

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <label for="industry_size1" class="label label1">1-20</label>
                     <input type="radio" id="industry_size2" name="fav_language" value="21-50" class="radio">
                     <label for="industry_size2" class="label label2">21-50</label>
-                    <input type="radio" id="industry_size3" name="fav_language" value="51-200" class="radio">
+                    <input type="radio" id="industry_size3" name="fav_language" value="51-200" class="radio" checked>
                     <label for="industry_size3" class="label label3">51-200</label>
                     <input type="radio" id="industry_size4" name="fav_language" value="201-500" class="radio">
                     <label for="industry_size4" class="label label4">201-500</label>
